RESOLVED FIXED 120629
[GTK][EFL] include missing localized string for subtitle auto track
https://bugs.webkit.org/show_bug.cgi?id=120629
Summary [GTK][EFL] include missing localized string for subtitle auto track
Danilo de Paula
Reported 2013-09-03 05:17:31 PDT
those methods are necessary to show the "Auto" track on webkitgtk
Attachments
Patch (3.12 KB, patch)
2013-09-03 05:19 PDT, Danilo de Paula
no flags
Patch (3.12 KB, patch)
2013-09-03 06:27 PDT, Danilo de Paula
no flags
Patch (2.33 KB, patch)
2013-09-03 10:01 PDT, Danilo de Paula
no flags
Danilo de Paula
Comment 1 2013-09-03 05:19:28 PDT
Danilo de Paula
Comment 2 2013-09-03 06:27:56 PDT
Danilo de Paula
Comment 3 2013-09-03 06:49:47 PDT
Danilo de Paula
Comment 4 2013-09-03 10:01:00 PDT
Danilo de Paula
Comment 5 2013-09-03 10:18:18 PDT
This patch is necessary since CaptionUserPreferences will use those methods (as it already does for TrackOffMenuItemText())
WebKit Commit Bot
Comment 6 2013-09-03 11:59:07 PDT
Comment on attachment 210380 [details] Patch Clearing flags on attachment: 210380 Committed r154994: <http://trac.webkit.org/changeset/154994>
WebKit Commit Bot
Comment 7 2013-09-03 11:59:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.